--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TZ.sln"
+    "dotnet.defaultSolution": "TZ_unity_runner.sln"
 }
